@@ -1,4 +1,4 @@
-.\" RCSid "$Id: pinterp.1,v 1.7 2009/02/21 00:06:05 greg Exp $"
+.\" RCSid "$Id: pinterp.1,v 1.8 2019/11/07 23:20:28 greg Exp $"
 .TH PINTERP 1 1/24/96 RADIANCE
 .SH NAME
 pinterp - interpolate/extrapolate view from pictures
@@ -51,6 +51,11 @@ This file is usually generated by the
 .I \-z
 option of
 .I rpict(1).
+.I Pinterp
+also accepts an encoded depth buffer, as produced by
+.I rtpict(1)
+or
+.I rcode_depth(1).
 If
 .I zspec
 is a positive number rather than a file, it will be used as a
@@ -241,4 +246,4 @@ pinterp \-vf fish.hdr \-vth -ff fish.hdr 1 > hemi.hdr
 Greg Ward
 .SH "SEE ALSO"
 getinfo(1), pdfblur(1), pfilt(1), pmblur(1), pmdblur(1), rpict(1),
-ranimate(1), rtrace(1), rvu(1)
+ranimate(1), rcode_depth(1), rtpict(1), rtrace(1), rvu(1)
