@@ -1,4 +1,4 @@
-.\" RCSid "$Id: vwrays.1,v 1.10 2012/06/14 22:42:21 greg Exp $"
+.\" RCSid "$Id: vwrays.1,v 1.11 2019/11/07 23:20:28 greg Exp $"
 .TH VWRAYS 1 1/15/99 RADIANCE
 .SH NAME
 vwrays - compute rays for a given picture or view
@@ -144,4 +144,4 @@ can reproduce any pixel ordering (i.e., any image orientation) when given
 a rendered picture, it will only produce standard scanline-ordered rays when 
 given a set of view parameters.
 .SH "SEE ALSO"
-rcalc(1), rpict(1), rcontrib(1), rtrace(1)
+rcalc(1), rcode_depth(1), rcontrib(1), rpict(1), rtpict(1), rtrace(1)
