@@ -2325,3 +2325,11 @@ Tutorial is posted at
 "https://github.com/nljones/Accelerad/wiki/The-Imageless-Method-for-Spatial-and-Annual-Glare-Analysis".
 
 Added support for loading RGBE images into matrices in dctimestep.
+
+Added -y option to gensky and gendaylit to support more accurate Michalsky
+solar position calculation.
+
+Changed rsplit so specifying a space as the separator parses words
+between whitespace.
+
+Added ability of vwrays, pinterp, and pmblur2 to read encoded depth files.
